APINonTxTest passes